<resources>
    <string name="app_name">Parking_Neo</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_location_data_provided">no location data provider</string>
    <string name="service_not_available">servicio no disponible</string>
    <string name="invalid_lat_long_used">lato lon usados invalidos</string>
    <string name="no_address_found">no se encuentra direccion</string>
    <string name="address_found">direccion encontrada</string>
    <string name="no_geocoder_available">geocoder no disponble</string>
    <string name="fetch_address">fetch address</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="rfid_001">RFID-001</string>
    <string name="entidad">ENTIDAD</string>
    <string name="tipo_de_servicio">TIPO DE SERVICIO</string>
    <string name="auto_particular">AUTO PARTICULAR</string>
    <string name="fecha_de_registro">FECHA DE REGISTRO</string>
    <string name="fecha_de_vencimiento">FECHA DE VENCIMIENTO</string>
    <string name="_02_05_2015">02/05/2015</string>
    <string name="_02_05_2018">02/05/2018</string>
    <string name="saldo_actual">SALDO ACTUAL</string>
    <string name="_100_00">$100.00</string>
    <string name="pick_time">tiempo</string>
    <string name="datepicker">date picker</string>
    <string name="timepicker">time picker</string>
    <string name="activar_alarma">Activar Alarma</string>
    <string name="cancelar_alarma">Cancelar Alarma</string>

    <string name="api_key_billing">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAi7F9ryvge9tR+U3iBYu7DVsLS3nZ7vfbPc9vFyq5ZXkFO5TnHGj/HCj7c1kSPd8hCspUJmGLTf9oCZfp75iWeSRgptEutySaoAs+JOMQ586adBTWFEt7ax1WR8J9Hikktp/rTIzVKSP05hppCrvEQkmDUrzwFVywZr8AvNB1ABYf1XQ+rBYIj038ndp+zDR9PJ2rKxArqTJx7lYjYHx+rvpkIQP3wseHqtQpqU4YwBvs1d4f8CyOuJo7qjOWFvtLZyb6M+61I5yLtSoNV2FW1XG+HzDUJgc2dBMHqVeRhLFH//HlipD0kfmoTYsur4c9KOE6tLB+I8L0s2gn1fZ7jwIDAQAB</string>
    <string name="comprar">COMPRAR</string>
    <string name="recargar">RECARGAR</string>
    <string name="cantidad_recargar">"RECARGAR POR $"</string>
    <string name="cantidad_comprar">"PAGAR PARQUÍMETRO POR $"</string>
    <string name="tiempo_alarma">"ACTIVAR ALARMA EN"</string>
    <string name="parquimetro_1">PARQUIMETRO 1</string>
    <string name="monto">30</string>
    <string name="rfid_oo1">RFID-001</string>
    <string name="titulo">titulo</string>
    <string name="descripcion">descripcion</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="email">compartir</string>


</resources>
