<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/movimientoID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/parki">

        <RelativeLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:alpha="0.9"
            android:background="@drawable/rectangule">

            <TextView
                android:id="@+id/montoID"
                style="@style/textStyleMonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monto" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:alpha="0.6"
            android:orientation="vertical"
            android:background="@drawable/rectangule">

            <TextView
                android:id="@+id/tarjetaID"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rfid_oo1" />

            <TextView
                android:id="@+id/nombreParquimetroID"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parquimetro_1" />
        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>