<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteWidth="384dp"
    tools:layout_editor_absoluteHeight="567dp">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- Collapser -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- Imagen del detalle -->
            <ImageView
                android:id="@+id/image_paralax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/parki"
                app:layout_collapseMode="parallax" />

            <!-- Toolbar -->
            <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/CustomActionBar" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <!-- Objeto con Scroll -->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tituloPromo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/space_text_card"
                android:text="@string/titulo"
                android:gravity="center"/>

            <TextView
                android:id="@+id/descripcion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/space_text_card"
                android:text="@string/descripcion"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/space_text_card"
                android:text="@string/lorem"
                android:gravity="center"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menuBtnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_addButtonColorNormal="@color/colorPrimary"
        app:fab_addButtonColorPressed="@color/colorPrimaryDark"
        android:layout_marginLeft="170dp"
        android:layout_gravity="bottom"
        app:fab_addButtonSize="normal"
        app:fab_labelStyle="@style/menu_labels_style"
        app:fab_labelsPosition="left">
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/emailBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@android:color/white"
            app:fab_colorPressed="@android:color/darker_gray"
            app:fab_icon="@drawable/share_icon"
            app:fab_title="@string/email" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</android.support.design.widget.CoordinatorLayout>
